# confluent-kafka

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: .env  consumer.py  docker-compose.stocks.yml  docker-compose.weather.yml  docker-compose.yml  producer.py
src/consumers/: Dockerfile  alert-consumer.py  alert_consumer.py  consumer.py  requirements.txt  stock_to_influxdb.py  weather-consumer.py
src/grafana/provisioning/dashboards/: dashboard.yaml  stock_dashboards.json
src/grafana/provisioning/datasources/: influxdb.yaml
src/processors/: Dockerfile  requirements.txt  stock_processor.py
src/producers/: Dockerfile  producer.py  requirements.txt  stock_producer.py  weather_producer.py
tests/consumers/: test_alert_consumer.py  test_stock_to_influxbd.py
tests/producers/: test_producer.py  test_stock_producer.py
